class-ified major divs

--- a/MiStore/appdetail.html
+++ b/MiStore/appdetail.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-<div id="header">
+<div class="top">
   <table id="appHeader">
     <tr>
       <td><img src="images/appdetail/userimage.jpg" height="56" width="56" alt="no-image"/></td>
@@ -35,7 +35,7 @@
   <img src="images/appdetail/summary-icon.png" class="icon" height="15" alt="->" /> </div>
 <p id="summary"> 使用任何一款VSCO的滤镜，都能够使照片模拟出不同胶片拍出来的效果。强烈推荐摄影发烧友下载. </p>
 <hr />
-<div id="interaction">
+<div class="interaction">
   <div>
     <button type="button" id="favorite" class="interactButton">
     <div>
@@ -55,7 +55,7 @@
   </div>
 </div>
 <hr />
-<div id="comments">
+<div class="comments">
   <div id="newCommentContainer">
     <div id="userBox"> <img src="images/appdetail/userimage.jpg" height="66" width="66" class="round"/> </div>
     <div id="commentInputWrapper">
@@ -90,7 +90,7 @@
     </ul>
   </div>
 </div>
-<div id="bottom">
+<div class="bottom">
   <button id="loadMore"> 查看更多 </button>
 </div>
 <script>
