--- a/MiStore/login.html
+++ b/MiStore/login.html
@@ -8,7 +8,7 @@
 <link href="css/login.css" rel="stylesheet" type="text/css">
 </head>
 <body>
-<div id="top">
+<div class="top">
 
 <div id="imageContainer">
 <div class="cutoff" id="cutoff">
@@ -21,7 +21,7 @@
 
 </div>
 </div>
-<div id="bottom">
+<div class="bottom">
 <form action="">
   <div id="inputContainer">
     <div id="inputWrapper"> <img id="userInputIcon" src="images/login/icon.png" />
