--- a/MiStore/mainpage.html
+++ b/MiStore/mainpage.html
@@ -9,189 +9,83 @@
 </head>
 
 <body>
-<div id="top">
-
-<div id="imageContainer">
-<div class="cutoff" id="cutoff">
-<div id="topBorder"></div>
-</div>
-<div id="bottomBorder"></div>
-<div id="imageWrapper">
-<img id="userimage" src="images/mainpage/userimage.jpg" height="130" width="130" />
-
-</div>
-<h2 id="topCaption" class="sectionCaption">Freedom</h2>
-</div>
+<div class="top">
+  <div id="imageContainer">
+    <div class="cutoff" id="cutoff">
+      <div id="topBorder"></div>
+    </div>
+    <div id="bottomBorder"></div>
+    <div id="imageWrapper"> <img id="userimage" src="images/mainpage/userimage.jpg" height="130" width="130" /> </div>
+    <h2 id="topCaption" class="sectionCaption">Freedom</h2>
+  </div>
 </div>
 <div class="sectionCaptionContainer">
-<hr/>
+  <hr/>
   <h2 class="sectionCaption">我的收藏</h2>
-  <img src="images/mainpage/staricon.png" height="15" width="15" class="icon" alt="#"/>
-</div>
-<div id="storage">
-
-  <ul class="appList">
-    <li class="app"><a href=""><img src="images/mainpage/userimage.jpg" class="appImage" height="55" width="55" alt="无画面"/>
-      <span class="caption">应用名</span></a>
-    </li>
-    <li class="app"><a href=""><img src="images/mainpage/userimage.jpg" class="appImage" height="55" width="55" alt="无画面"/>
-      <span class="caption">应用名</span></a>
-    </li>
-        <li class="app"><a href=""><img src="images/mainpage/userimage.jpg" class="appImage" height="55" width="55" alt="无画面"/>
-      <span class="caption">应用名</span></a>
-    </li>
-        <li class="app"><a href=""><img src="images/mainpage/userimage.jpg" class="appImage" height="55" width="55" alt="无画面"/>
-      <span class="caption">应用名</span></a>
-    </li>
-        <li class="app"><a href=""><img src="images/mainpage/userimage.jpg" class="appImage" height="55" width="55" alt="无画面"/>
-      <span class="caption">应用名</span></a>
-    </li>
-        <li class="app"><a href=""><img src="images/mainpage/userimage.jpg" class="appImage" height="55" width="55" alt="无画面"/>
-      <span class="caption">应用名</span></a>
-    </li>
-        <li class="app"><a href=""><img src="images/mainpage/userimage.jpg" class="appImage" height="55" width="55" alt="无画面"/>
-      <span class="caption">应用名</span></a>
-    </li>
-        <li class="app"><a href=""><img src="images/mainpage/userimage.jpg" class="appImage" height="55" width="55" alt="无画面"/>
-      <span class="caption">应用名</span></a>
-    </li>
-        <li class="app"><a href=""><img src="images/mainpage/userimage.jpg" class="appImage" height="55" width="55" alt="无画面"/>
-      <span class="caption">应用名</span></a>
-    </li>
-        <li class="app"><a href=""><img src="images/mainpage/userimage.jpg" class="appImage" height="55" width="55" alt="无画面"/>
-      <span class="caption">应用名</span></a>
-    </li>
-        <li class="app"><a href=""><img src="images/mainpage/userimage.jpg" class="appImage" height="55" width="55" alt="无画面"/>
-      <span class="caption">应用名</span></a>
-    </li>
-        <li class="app"><a href=""><img src="images/mainpage/userimage.jpg" class="appImage" height="55" width="55" alt="无画面"/>
-      <span class="caption">应用名</span></a>
-    </li>
-        <li class="app"><a href=""><img src="images/mainpage/userimage.jpg" class="appImage" height="55" width="55" alt="无画面"/>
-      <span class="caption">应用名</span></a>
-    </li>
-        <li class="app"><a href=""><img src="images/mainpage/userimage.jpg" class="appImage" height="55" width="55" alt="无画面"/>
-      <span class="caption">应用名</span></a>
-    </li>
-        <li class="app"><a href=""><img src="images/mainpage/userimage.jpg" class="appImage" height="55" width="55" alt="无画面"/>
-      <span class="caption">应用名</span></a>
-    </li>
-        <li class="app"><a href=""><img src="images/mainpage/userimage.jpg" class="appImage" height="55" width="55" alt="无画面"/>
-      <span class="caption">应用名</span></a>
-    </li>
-        <li class="app"><a href=""><img src="images/mainpage/userimage.jpg" class="appImage" height="55" width="55" alt="无画面"/>
-      <span class="caption">应用名</span></a>
-    </li>
-        <li class="app"><a href=""><img src="images/mainpage/userimage.jpg" class="appImage" height="55" width="55" alt="无画面"/>
-      <span class="caption">应用名</span></a>
-    </li>
-        <li class="app"><a href=""><img src="images/mainpage/userimage.jpg" class="appImage" height="55" width="55" alt="无画面"/>
-      <span class="caption">应用名</span></a>
-    </li>
-        <li class="app"><a href=""><img src="images/mainpage/userimage.jpg" class="appImage" height="55" width="55" alt="无画面"/>
-      <span class="caption">应用名</span></a>
-    </li>
-        <li class="app"><a href=""><img src="images/mainpage/userimage.jpg" class="appImage" height="55" width="55" alt="无画面"/>
-      <span class="caption">应用名</span></a>
-    </li>
-        <li class="app"><a href=""><img src="images/mainpage/userimage.jpg" class="appImage" height="55" width="55" alt="无画面"/>
-      <span class="caption">应用名</span></a>
-    </li>
-        <li class="app"><a href=""><img src="images/mainpage/userimage.jpg" class="appImage" height="55" width="55" alt="无画面"/>
-      <span class="caption">应用名</span></a>
-    </li>
-  </ul>
-  <button id="loadStorage">
-  <span>查看更多</span>
-  </button>
+  <img src="images/mainpage/staricon.png" height="15" width="15" class="icon" alt="#"/> </div>
+<div class="storage">
+<ul class="appList">
+  <li class="app"><a href=""><img src="images/mainpage/userimage.jpg" class="appImage" height="55" width="55" alt="无画面"/> <span class="caption">应用名</span></a> </li>
+  <li class="app"><a href=""><img src="images/mainpage/userimage.jpg" class="appImage" height="55" width="55" alt="无画面"/> <span class="caption">应用名</span></a> </li>
+  <li class="app"><a href=""><img src="images/mainpage/userimage.jpg" class="appImage" height="55" width="55" alt="无画面"/> <span class="caption">应用名</span></a> </li>
+  <li class="app"><a href=""><img src="images/mainpage/userimage.jpg" class="appImage" height="55" width="55" alt="无画面"/> <span class="caption">应用名</span></a> </li>
+  <li class="app"><a href=""><img src="images/mainpage/userimage.jpg" class="appImage" height="55" width="55" alt="无画面"/> <span class="caption">应用名</span></a> </li>
+  <li class="app"><a href=""><img src="images/mainpage/userimage.jpg" class="appImage" height="55" width="55" alt="无画面"/> <span class="caption">应用名</span></a> </li>
+  <li class="app"><a href=""><img src="images/mainpage/userimage.jpg" class="appImage" height="55" width="55" alt="无画面"/> <span class="caption">应用名</span></a> </li>
+  <li class="app"><a href=""><img src="images/mainpage/userimage.jpg" class="appImage" height="55" width="55" alt="无画面"/> <span class="caption">应用名</span></a> </li>
+  <li class="app"><a href=""><img src="images/mainpage/userimage.jpg" class="appImage" height="55" width="55" alt="无画面"/> <span class="caption">应用名</span></a> </li>
+  <li class="app"><a href=""><img src="images/mainpage/userimage.jpg" class="appImage" height="55" width="55" alt="无画面"/> <span class="caption">应用名</span></a> </li>
+  <li class="app"><a href=""><img src="images/mainpage/userimage.jpg" class="appImage" height="55" width="55" alt="无画面"/> <span class="caption">应用名</span></a> </li>
+  <li class="app"><a href=""><img src="images/mainpage/userimage.jpg" class="appImage" height="55" width="55" alt="无画面"/> <span class="caption">应用名</span></a> </li>
+  <li class="app"><a href=""><img src="images/mainpage/userimage.jpg" class="appImage" height="55" width="55" alt="无画面"/> <span class="caption">应用名</span></a> </li>
+  <li class="app"><a href=""><img src="images/mainpage/userimage.jpg" class="appImage" height="55" width="55" alt="无画面"/> <span class="caption">应用名</span></a> </li>
+  <li class="app"><a href=""><img src="images/mainpage/userimage.jpg" class="appImage" height="55" width="55" alt="无画面"/> <span class="caption">应用名</span></a> </li>
+  <li class="app"><a href=""><img src="images/mainpage/userimage.jpg" class="appImage" height="55" width="55" alt="无画面"/> <span class="caption">应用名</span></a> </li>
+  <li class="app"><a href=""><img src="images/mainpage/userimage.jpg" class="appImage" height="55" width="55" alt="无画面"/> <span class="caption">应用名</span></a> </li>
+  <li class="app"><a href=""><img src="images/mainpage/userimage.jpg" class="appImage" height="55" width="55" alt="无画面"/> <span class="caption">应用名</span></a> </li>
+  <li class="app"><a href=""><img src="images/mainpage/userimage.jpg" class="appImage" height="55" width="55" alt="无画面"/> <span class="caption">应用名</span></a> </li>
+  <li class="app"><a href=""><img src="images/mainpage/userimage.jpg" class="appImage" height="55" width="55" alt="无画面"/> <span class="caption">应用名</span></a> </li>
+  <li class="app"><a href=""><img src="images/mainpage/userimage.jpg" class="appImage" height="55" width="55" alt="无画面"/> <span class="caption">应用名</span></a> </li>
+  <li class="app"><a href=""><img src="images/mainpage/userimage.jpg" class="appImage" height="55" width="55" alt="无画面"/> <span class="caption">应用名</span></a> </li>
+  <li class="app"><a href=""><img src="images/mainpage/userimage.jpg" class="appImage" height="55" width="55" alt="无画面"/> <span class="caption">应用名</span></a> </li>
+</ul>
+<button id="loadStorage"> <span>查看更多</span> </button>
 </div>
 <div class="sectionCaptionContainer">
-<hr />
-<h2 class="sectionCaption">
-和精品应用不期而遇
-</h2>
-<img src="images/mainpage/arrow.png" class="icon" height="15" width="15" alt="->" />
-</div>
-<div id="suggested">
-<ul class="appList">
-<li class="app"><a href=""><img src="images/mainpage/userimage.jpg" class="appImage" height="55" width="55" alt="无画面"/>
-      <span class="caption">应用名</span></a>
-    </li>
-    <li class="app"><a href=""><img src="images/mainpage/userimage.jpg" class="appImage" height="55" width="55" alt="无画面"/>
-      <span class="caption">应用名</span></a>
-    </li>
-        <li class="app"><a href=""><img src="images/mainpage/userimage.jpg" class="appImage" height="55" width="55" alt="无画面"/>
-      <span class="caption">应用名</span></a>
-    </li>
-        <li class="app"><a href=""><img src="images/mainpage/userimage.jpg" class="appImage" height="55" width="55" alt="无画面"/>
-      <span class="caption">应用名</span></a>
-    </li>
-        <li class="app"><a href=""><img src="images/mainpage/userimage.jpg" class="appImage" height="55" width="55" alt="无画面"/>
-      <span class="caption">应用名</span></a>
-    </li>
-        <li class="app"><a href=""><img src="images/mainpage/userimage.jpg" class="appImage" height="55" width="55" alt="无画面"/>
-      <span class="caption">应用名</span></a>
-    </li>
-        <li class="app"><a href=""><img src="images/mainpage/userimage.jpg" class="appImage" height="55" width="55" alt="无画面"/>
-      <span class="caption">应用名</span></a>
-    </li>
-        <li class="app"><a href=""><img src="images/mainpage/userimage.jpg" class="appImage" height="55" width="55" alt="无画面"/>
-      <span class="caption">应用名</span></a>
-    </li>
-        <li class="app"><a href=""><img src="images/mainpage/userimage.jpg" class="appImage" height="55" width="55" alt="无画面"/>
-      <span class="caption">应用名</span></a>
-    </li>
-        <li class="app"><a href=""><img src="images/mainpage/userimage.jpg" class="appImage" height="55" width="55" alt="无画面"/>
-      <span class="caption">应用名</span></a>
-    </li>
-        <li class="app"><a href=""><img src="images/mainpage/userimage.jpg" class="appImage" height="55" width="55" alt="无画面"/>
-      <span class="caption">应用名</span></a>
-    </li>
-        <li class="app"><a href=""><img src="images/mainpage/userimage.jpg" class="appImage" height="55" width="55" alt="无画面"/>
-      <span class="caption">应用名</span></a>
-    </li>
-        <li class="app"><a href=""><img src="images/mainpage/userimage.jpg" class="appImage" height="55" width="55" alt="无画面"/>
-      <span class="caption">应用名</span></a>
-    </li>
-        <li class="app"><a href=""><img src="images/mainpage/userimage.jpg" class="appImage" height="55" width="55" alt="无画面"/>
-      <span class="caption">应用名</span></a>
-    </li>
-        <li class="app"><a href=""><img src="images/mainpage/userimage.jpg" class="appImage" height="55" width="55" alt="无画面"/>
-      <span class="caption">应用名</span></a>
-    </li>
-        <li class="app"><a href=""><img src="images/mainpage/userimage.jpg" class="appImage" height="55" width="55" alt="无画面"/>
-      <span class="caption">应用名</span></a>
-    </li>
-        <li class="app"><a href=""><img src="images/mainpage/userimage.jpg" class="appImage" height="55" width="55" alt="无画面"/>
-      <span class="caption">应用名</span></a>
-    </li>
-        <li class="app"><a href=""><img src="images/mainpage/userimage.jpg" class="appImage" height="55" width="55" alt="无画面"/>
-      <span class="caption">应用名</span></a>
-    </li>
-        <li class="app"><a href=""><img src="images/mainpage/userimage.jpg" class="appImage" height="55" width="55" alt="无画面"/>
-      <span class="caption">应用名</span></a>
-    </li>
-        <li class="app"><a href=""><img src="images/mainpage/userimage.jpg" class="appImage" height="55" width="55" alt="无画面"/>
-      <span class="caption">应用名</span></a>
-    </li>
-        <li class="app"><a href=""><img src="images/mainpage/userimage.jpg" class="appImage" height="55" width="55" alt="无画面"/>
-      <span class="caption">应用名</span></a>
-    </li>
-        <li class="app"><a href=""><img src="images/mainpage/userimage.jpg" class="appImage" height="55" width="55" alt="无画面"/>
-      <span class="caption">应用名</span></a>
-    </li>
-        <li class="app"><a href=""><img src="images/mainpage/userimage.jpg" class="appImage" height="55" width="55" alt="无画面"/>
-      <span class="caption">应用名</span></a>
-    </li>
-</ul>
+  <hr />
+  <h2 class="sectionCaption"> 和精品应用不期而遇 </h2>
+  <img src="images/mainpage/arrow.png" class="icon" height="15" width="15" alt="->" /> </div>
+<div class="suggested">
+  <ul class="appList">
+    <li class="app"><a href=""><img src="images/mainpage/userimage.jpg" class="appImage" height="55" width="55" alt="无画面"/> <span class="caption">应用名</span></a> </li>
+    <li class="app"><a href=""><img src="images/mainpage/userimage.jpg" class="appImage" height="55" width="55" alt="无画面"/> <span class="caption">应用名</span></a> </li>
+    <li class="app"><a href=""><img src="images/mainpage/userimage.jpg" class="appImage" height="55" width="55" alt="无画面"/> <span class="caption">应用名</span></a> </li>
+    <li class="app"><a href=""><img src="images/mainpage/userimage.jpg" class="appImage" height="55" width="55" alt="无画面"/> <span class="caption">应用名</span></a> </li>
+    <li class="app"><a href=""><img src="images/mainpage/userimage.jpg" class="appImage" height="55" width="55" alt="无画面"/> <span class="caption">应用名</span></a> </li>
+    <li class="app"><a href=""><img src="images/mainpage/userimage.jpg" class="appImage" height="55" width="55" alt="无画面"/> <span class="caption">应用名</span></a> </li>
+    <li class="app"><a href=""><img src="images/mainpage/userimage.jpg" class="appImage" height="55" width="55" alt="无画面"/> <span class="caption">应用名</span></a> </li>
+    <li class="app"><a href=""><img src="images/mainpage/userimage.jpg" class="appImage" height="55" width="55" alt="无画面"/> <span class="caption">应用名</span></a> </li>
+    <li class="app"><a href=""><img src="images/mainpage/userimage.jpg" class="appImage" height="55" width="55" alt="无画面"/> <span class="caption">应用名</span></a> </li>
+    <li class="app"><a href=""><img src="images/mainpage/userimage.jpg" class="appImage" height="55" width="55" alt="无画面"/> <span class="caption">应用名</span></a> </li>
+    <li class="app"><a href=""><img src="images/mainpage/userimage.jpg" class="appImage" height="55" width="55" alt="无画面"/> <span class="caption">应用名</span></a> </li>
+    <li class="app"><a href=""><img src="images/mainpage/userimage.jpg" class="appImage" height="55" width="55" alt="无画面"/> <span class="caption">应用名</span></a> </li>
+    <li class="app"><a href=""><img src="images/mainpage/userimage.jpg" class="appImage" height="55" width="55" alt="无画面"/> <span class="caption">应用名</span></a> </li>
+    <li class="app"><a href=""><img src="images/mainpage/userimage.jpg" class="appImage" height="55" width="55" alt="无画面"/> <span class="caption">应用名</span></a> </li>
+    <li class="app"><a href=""><img src="images/mainpage/userimage.jpg" class="appImage" height="55" width="55" alt="无画面"/> <span class="caption">应用名</span></a> </li>
+    <li class="app"><a href=""><img src="images/mainpage/userimage.jpg" class="appImage" height="55" width="55" alt="无画面"/> <span class="caption">应用名</span></a> </li>
+    <li class="app"><a href=""><img src="images/mainpage/userimage.jpg" class="appImage" height="55" width="55" alt="无画面"/> <span class="caption">应用名</span></a> </li>
+    <li class="app"><a href=""><img src="images/mainpage/userimage.jpg" class="appImage" height="55" width="55" alt="无画面"/> <span class="caption">应用名</span></a> </li>
+    <li class="app"><a href=""><img src="images/mainpage/userimage.jpg" class="appImage" height="55" width="55" alt="无画面"/> <span class="caption">应用名</span></a> </li>
+    <li class="app"><a href=""><img src="images/mainpage/userimage.jpg" class="appImage" height="55" width="55" alt="无画面"/> <span class="caption">应用名</span></a> </li>
+    <li class="app"><a href=""><img src="images/mainpage/userimage.jpg" class="appImage" height="55" width="55" alt="无画面"/> <span class="caption">应用名</span></a> </li>
+    <li class="app"><a href=""><img src="images/mainpage/userimage.jpg" class="appImage" height="55" width="55" alt="无画面"/> <span class="caption">应用名</span></a> </li>
+    <li class="app"><a href=""><img src="images/mainpage/userimage.jpg" class="appImage" height="55" width="55" alt="无画面"/> <span class="caption">应用名</span></a> </li>
+  </ul>
 </div>
 </div>
-<div id="bottom">
-<button type="button" id="loadMore">
-<img src="images/mainpage/refresh.png" height="30" width="30" />
-<br/>
-换一批
-</button>
+<div class="bottom">
+  <button type="button" id="loadMore"> <img src="images/mainpage/refresh.png" height="30" width="30" /> <br/>
+  换一批 </button>
 </div>
 <script>
 function resize()
