--- a/zuimeila/zuimeila.html
+++ b/zuimeila/zuimeila.html
@@ -9,8 +9,8 @@
 </head>
 
 <body>
-<div id="top"> <img src="images/zuimeila/banner.png" height="166" width="360" alt="Banner Missing"/> </div>
-<div id="middle">
+<div class="top"> <img src="images/zuimeila/banner.png" height="166" width="360" alt="Banner Missing"/> </div>
+<div class="middle">
 <div>
   <div class="sectionCaptionContainer">
     <hr/>
@@ -35,10 +35,10 @@
   </table>
 </div>
 </div>
-<div id="bottom">
+<div class="bottom">
 <h2 class="sectionCaption orange">欢迎关注小米应用商店和最美应用官方微信</h2>
 <h3>点击下方关注有惊喜哟~</h3>
-<div id="appContainer">
+<div class="appContainer">
 <span class="app floatleft"><a href=""><img src="images/zuimeila/xiaomi.png" class="appImage" height="55" width="55" alt="无画面"/> <span class="caption">小米应用商店</span></a></span>
 <span class="app floatright"><a href=""><img src="images/zuimeila/zuimeila.png" class="appImage" height="55" width="55" alt="无画面"/> <span class="caption">最美应用</span></a></span>
 
