css/margin adjustments

--- a/zuimeila/zuimeila.html
+++ b/zuimeila/zuimeila.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-<div class="top"> <img src="images/zuimeila/banner.png" height="166" width="360" alt="Banner Missing"/> </div>
+<div class="top"> <img src="images/zuimeila/banner.png" width="100%" alt="Banner Missing"/> </div>
 <div class="middle">
 <div>
   <div class="sectionCaptionContainer">
